# rust-axum-boilerplate-v2

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/pass/: error.rs  mod.rs
crates/libs/lib-auth/src/pass/scheme/: error.rs  mod.rs  scheme_01.rs  scheme_02.rs
crates/libs/lib-auth/src/token/: error.rs  mod.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs
crates/libs/lib-core/src/ctx/: error.rs  mod.rs
crates/libs/lib-core/src/model/: error.rs  mod.rs
crates/libs/lib-core/src/model/admin/: admin_crud.rs  mod.rs
crates/libs/lib-core/src/model/book/: mod.rs
crates/libs/lib-core/src/model/general/: cid_mid.rs  mod.rs
crates/libs/lib-core/src/model/store/: error.rs  mod.rs
crates/libs/lib-core/src/model/store/dbx/: error.rs  mod.rs
crates/libs/lib-email/: Cargo.toml
crates/libs/lib-email/src/: config.rs  error.rs  lib.rs  worker.rs
crates/libs/lib-email/src/template/: mod.rs
crates/libs/lib-query/: Cargo.toml
crates/libs/lib-query/src/: admin.rs  general.rs  lib.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: email.rs  lib.rs  time.rs
crates/libs/lib-web/: Cargo.toml
crates/libs/lib-web/src/: error.rs  lib.rs
crates/libs/lib-web/src/handlers/: handlers_admin.rs  handlers_email.rs  handlers_login.rs  mod.rs
crates/libs/lib-web/src/log/: mod.rs
crates/libs/lib-web/src/middleware/: mw_auth.rs  mw_req_stamp.rs  mw_res_map.rs
crates/libs/lib-web/src/routes/: route_static.rs
crates/libs/lib-web/src/utils/: token.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/examples/: quick_dev.rs
crates/services/web-server/src/: config.rs  main.rs
crates/services/web-server/src/web/: mod.rs  routes_admin.rs  routes_email.rs  routes_login.rs
crates/tools/gen-key/: Cargo.toml
crates/tools/gen-key/src/: main.rs
migrations/: 20241105070213_tables_down.sql  20241105070219_tables_schema_001.sql  20241105070220_tables_schema_002.sql  20241105070224_tables_seeding_001.sql
public/: index.html
