[workspace.lints.rust]
unsafe_code = "forbid"
# unused = "allow" # For experimental dev.

[workspace]
resolver = "2"
members = [ 
  # --- Application Libraries
  "crates/libs/lib-auth",
  "crates/libs/lib-core",
  "crates/libs/lib-email",
  "crates/libs/lib-query",
  "crates/libs/lib-utils",
  "crates/libs/lib-web",

  # -- Application service
  "crates/services/web-server",

  # --- Application Tools
  "crates/tools/gen-key",
]

[workspace.dependencies]
# -- async
tokio = { version = "1", features = ["full"] }
tower-sessions = "0.14"

# -- serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["time_0_3"] }
uuid = { version = "1", features = ["v4", "v7", "fast-rng"] }

# -- JSON-rpc
# rpc-router = { version = "=0.1.3" }

# -- data
sqlx = { version = "0.8", features = ["macros", "runtime-tokio", "postgres", "uuid", "runtime-tokio-rustls"] }
sea-query = "0.32" 
sea-query-binder = { version = "0.7.0", features = ["sqlx-postgres", "with-uuid", "with-time"] }
# modql = { version = "0.4.0", features = ["with-sea-query"] }

# -- others
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
derive_more = { version = "2", features = ["from", "display"] }
thiserror = "2"
# rpc-router = "0.1"
