[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
# --- App libs
lib-utils = { path = "../../libs/lib-utils/" }
lib-auth = { path = "../../libs/lib-auth/" }
lib-core = { path = "../../libs/lib-core/" }
lib-web = { path = "../../libs/lib-web" }
# --- JSON
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
# --- Async
tokio = { version = "1", features = ["full"] }
# --- Web
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tower-cookies = "0.11"
# --- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# --- Others
uuid = { workspace = true }
time = { workspace = true }
derive_more = { workspace = true }
strum_macros = "0.27"
thiserror.workspace = true

[dev-dependencies]
httpc-test = "0.1"
